Depl-271979 Add support to load db/scripts from classpath Depl-271979-242656 [DEV] Add support to load db/scripts from classpath