@@ -2,17 +2,23 @@ package com.onevizion.scmdb.facade;
 
 import com.onevizion.scmdb.AppArguments;
 import com.onevizion.scmdb.ColorLogger;
+import com.onevizion.scmdb.ResourceResolveUtils;
 import com.onevizion.scmdb.dao.DbScriptDaoOra;
 import com.onevizion.scmdb.exception.ScmdbException;
 import com.onevizion.scmdb.vo.SqlScript;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.math.NumberUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.FileSystemResource;
 import org.springframework.stereotype.Component;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.*;
+import java.nio.file.Files;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -38,8 +44,15 @@ public class DbScriptFacade {
     private List<SqlScript> scriptsInDir;
 
     public void init() {
-        execDir = new File(appArguments.getScriptsDirectory().getAbsolutePath() + File.separator + EXEC_FOLDER_NAME);
-        scriptsInDir = createScriptsFromFiles(appArguments.isReadAllFilesContent());
+        try {
+            execDir = appArguments.getScriptsDirectory() != null
+                    ? new File(appArguments.getScriptsDirectory().getAbsolutePath(), EXEC_FOLDER_NAME)
+                    : Files.createTempDirectory(EXEC_FOLDER_NAME).toFile();
+        } catch (IOException e) {
+            throw new RuntimeException("Unable to create temporarily", e);
+        }
+
+        scriptsInDir = createScriptsFromResources(appArguments.isReadAllFilesContent());
     }
 
     public List<SqlScript> getNotExecutedScripts() {
@@ -80,7 +93,7 @@ public class DbScriptFacade {
 
     public void copyRollbackToExecDir(SqlScript rollback) {
         File rollBackFile = new File(execDir.getAbsolutePath() + File.separator + rollback.getName());
-        rollback.setFile(rollBackFile);
+        rollback.setResource(new FileSystemResource(rollBackFile));
         try {
             logger.debug("Creating rollback script [{}]", rollBackFile.getAbsolutePath());
             FileUtils.writeStringToFile(rollBackFile, rollback.getText(), "UTF-8");
@@ -104,13 +117,19 @@ public class DbScriptFacade {
         }
     }
 
-    private List<SqlScript> createScriptsFromFiles(boolean readAllScriptsContent) {
-        List<File> scriptFiles = (List<File>) FileUtils.listFiles(appArguments.getScriptsDirectory(), new String[]{"sql"}, false);
-        return scriptFiles.stream()
-                          .map(f -> SqlScript.create(f, readAllScriptsContent))
-                          .filter(s -> !isIgnoredScript(s))
-                          .sorted()
-                          .collect(Collectors.toList());
+    private List<SqlScript> createScriptsFromResources(boolean readAllScriptsContent) {
+        return ResourceResolveUtils.resolveScriptResources(appArguments.getScriptsDirectory())
+                                   .stream()
+                                   .map(resource -> {
+                                       try {
+                                           return SqlScript.create(resource, readAllScriptsContent);
+                                       } catch (IOException e) {
+                                           throw new RuntimeException("Unable to create SqlScript instance for [" + resource + "]", e);
+                                       }
+                                   })
+                                   .filter(s -> !isIgnoredScript(s))
+                                   .sorted()
+                                   .toList();
     }
 
     public List<SqlScript> getUpdatedScripts() {
@@ -174,7 +193,7 @@ public class DbScriptFacade {
     }
 
     public void createAllFromDirectory() {
-        sqlScriptDaoOra.createAll(createScriptsFromFiles(true));
+        sqlScriptDaoOra.createAll(createScriptsFromResources(true));
     }
 
     public void delete(Long id) {
